--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
 <body>
     <section class="content">
         <article class="pokemon">
-            <img src="images/bulbasaur.png" width="200" height="200" alt="">
+            <img src="images/bulbasaur.png" width="200" height="200" alt="Bulbasaur">
             <p>Nº 001</p>
             <h2>Bulbasaur</h2>
         </article>
         <article class="pokemon">
-            <img src="images/bulbasaur.png" width="200" height="200" alt="">
-            <p>Nº 001</p>
-            <h2>Bulbasaur</h2>
+            <img src="images/charmander.png" width="200" height="200" alt="Charmander">
+            <p>Nº 004</p>
+            <h2>Charmander</h2>
         </article>
         <article class="pokemon">
-            <img src="images/bulbasaur.png" width="200" height="200" alt="">
-            <p>Nº 001</p>
-            <h2>Bulbasaur</h2>
+            <img src="images/charizard.png" width="200" height="200" alt="Charizard">
+            <p>Nº 006</p>
+            <h2>Charizard</h2>
         </article>
         <article class="pokemon">
-            <img src="images/bulbasaur.png" width="200" height="200" alt="">
-            <p>Nº 001</p>
+            <img src="images/rattata.png" width="200" height="200" alt="Rattata">
+            <p>Nº 019</p>
             <h2>Bulbasaur</h2>
         </article>
     </section>
