changed last pokemon name

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <article class="pokemon">
             <img src="images/rattata.png" width="200" height="200" alt="Rattata">
             <p>Nº 019</p>
-            <h2>Bulbasaur</h2>
+            <h2>Rattata</h2>
         </article>
     </section>
 
