--- a/index.html
+++ b/index.html
@@ -10,40 +10,53 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="navBar">
-            <section>
-                <img class="logo" src="images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" height="80" width="150">
-            </section>
-            <section class="navOptions">
-                <a href="index.html">Home</a>
-                <a href="pokemons/bulbasaur.html">Pokedex</a>
-                <a href="cadastro.html">Cadastro</a>
-            </section>
+    <header class="navbar">
+        <a href="#" class="logo">
+            <img src="images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" width="120">
+        </a>
+        <nav>
+            <ul class="navLinks">
+                <li><a class="navLink" href="index.html">Home</a></li>
+                <li><a class="navLink" href="pokemons/bulbasaur.html">Pokedex</a></li>
+                <li><a class="navLink" href="cadastro.html">Cadastro</a></li>
+            </ul>
         </nav>
-        <section class="content">
-            <article class="pokemon">
+    </header>
+
+    <section class="content">
+        <article class="pokemon">
+            <a href="pokemons/bulbasaur.html">
                 <img src="images/bulbasaur.png" width="200" height="200" alt="Bulbasaur">
                 <p>Nº 001</p>
                 <h2>Bulbasaur</h2>
-            </article>
-            <article class="pokemon">
+            </a>
+
+        </article>
+        <article class="pokemon">
+            <a href="pokemons/charmander.html">
                 <img src="images/charmander.png" width="200" height="200" alt="Charmander">
                 <p>Nº 004</p>
                 <h2>Charmander</h2>
-            </article>
-            <article class="pokemon">
+            </a>
+
+        </article>
+        <article class="pokemon">
+            <a href="pokemons/charizard.html">
                 <img src="images/charizard.png" width="200" height="200" alt="Charizard">
                 <p>Nº 006</p>
                 <h2>Charizard</h2>
-            </article>
-            <article class="pokemon">
+            </a>
+
+        </article>
+        <article class="pokemon">
+            <a href="pokemons/rattata.html">
                 <img src="images/rattata.png" width="200" height="200" alt="Rattata">
                 <p>Nº 019</p>
                 <h2>Rattata</h2>
-            </article>
-        </section>
-    </div>
+            </a>
+
+        </article>
+    </section>
 
 
 </body>
