--- a/pokemons/bulbasaur/bulbasaur.html
+++ b/pokemons/bulbasaur/bulbasaur.html
@@ -13,7 +13,7 @@
     <div class="container">
         <nav class="navBar">
             <section>
-                <img class="logo" src="../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" height="80" width="150">
+                <img class="logo" src="../../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" height="80" width="150">
             </section>
             <section class="navOptions">
                 <a href="index.html">Home</a>
@@ -30,12 +30,39 @@
         </nav>
         <section class="content">
             <article class="pokemon">
-                <img src="../images/bulbasaur.png" width="300" height="300" alt="Bulbasaur">
-
+                <img src="../../images/" alt="Bulbasaur">
             </article>
-            
-        </section>
+
+
+
     </div>
+    </section>
+    <section class="features">
+        <div>
+            <h3>Stat</h3>
+        </div>
+    </section>
+    <section class="card1">
+        <div>
+            <h3>HP:50</h3>
+        </div>
+    </section>
+    <section class="card2">
+        <h3>Attack:62</h3>
+    </section>
+    <section class="card3">
+        <h3>Defonse:63</h3>
+    </section>
+    <section class="card4">
+        <h3>Sp.Ath: 50</h3>
+    </section>
+    <section class="card5">
+        <h3>Sp.Def: 80</h3>
+    </section>
+    <section class="card6">
+        <h3>Speed: 50</h3>
+    </section>
+    
 
 
 </body>
