add rattata page

--- a/pokemons/rattata/rattata.html
+++ b/pokemons/rattata/rattata.html
@@ -5,22 +5,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="rattata.css">
     <title>Pokedex</title>
 </head>
 
 <body>
     <header class="navbar">
-        <a href="#" class="logo">
-            <img src="../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" width="120">
+        <a href="../../index.html" class="logo">
+            <img src="../../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" width="120">
         </a>
         <nav>
             <ul class="navLinks">
-                <li><a class="navLink" href="index.html">Home</a></li>
-                <li><a class="navLink" href="pokemons/bulbasaur.html">Pokedex</a></li>
-                <li><a class="navLink" href="cadastro.html">Cadastro</a></li>
+                <li><a class="navLink" href="../../index.html">Home</a></li>
+                <li><a class="navLink" href="../bulbasaur/bulbasaur.html">Pokedex</a></li>
+                <li><a class="navLink" href="../../cadastro.html">Cadastro</a></li>
             </ul>
         </nav>
     </header>
+    <header class="pokemonBar">
+        <section>
+            <a href="../charizard/charizard.html">&lt Charizard</a>
+        </section>
+        <section>
+            <a href="rattata.html">#019 - Rattata</a>
+        </section>
+        <section>
+            <a href="../bulbasaur/bulbasaur.html">&gt Bulbasaur</a>
+        </section>
+    </header>
+    <section class="content">
+        <section class="pokemonCard">
+            <section>
+                <img src="../../images/rattata.png" alt="pokemon rattata" class="pokemonImage">
+            </section>
+            <section>
+                <section>
+                    <h1 class="aboutPokemon">Will chew on anything with its fangs. If you see one, you can be certain that
+                        40 more live in the area.</h1>
+                </section>
+                <section class="height">
+                    <h1 class="title">Height</h1>
+                    <p>0.3 m</p>
+                </section>
+                <section class="category">
+                    <h1 class="title">Category</h1>
+                    <p>Mouse</p>
+                </section>
+                <section class="weight">
+                    <h1 class="title">Weight</h1>
+                    <p>3.5 kg</p>
+                </section>
+                <section class="abilities">
+                    <h1 class="title">Abilities</h1>
+                    <p>Run away</p>
+                    <p>Guts</p>
+                </section>
+            </section>
+        </section>
+        <section class="pokemonStatus">
+            <section class="status">
+                <h1 id="status">Status</h1>
+            </section>
+            <section class="hp stat">
+                <h1 class="titleStatus">HP: 20</h1>
+            </section>
+            <section class="hpStatus stat">
+                <section class="hpSecondStatus stat"></section>
+            </section>
+            <section class="attack stat">
+                <h1 class="titleStatus">Attack: 40</h1>
+            </section>
+            <section class="attackStatus stat">
+                <section class="attackSecondStatus stat"></section>
+            </section>
+            <section class="defense stat">
+                <h1 class="titleStatus">Defense: 30</h1>
+            </section>
+            <section class="defenseStatus stat">
+                <section class="defenseSecondStatus stat"></section>
+            </section>
+            <section class="spAtk stat">
+                <h1 class="titleStatus">Sp. Atk: 20</h1>
+            </section>
+            <section class="spAtkStatus stat">
+                <section class="spAtkSecondStatus stat"></section>
+            </section>
+            <section class="spDef stat">
+                <h1 class="titleStatus">Sp. Def: 30</h1>
+            </section>
+            <section class="spDefStatus stat">
+                <section class="spDefSecondStatus stat"></section>
+            </section>
+            <section class="speed stat">
+                <h1 class="titleStatus">Speed: 50</h1>
+            </section>
+            <section class="speedStatus stat">
+                <section class="speedSecondStatus stat"></section>
+            </section>
+        </section>
+    </section>
 </body>
+
 </html>
