--- a/pokemons/bulbasaur/bulbasaur.html
+++ b/pokemons/bulbasaur/bulbasaur.html
@@ -16,21 +16,21 @@
                 <img class="logo" src="../../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" height="80" width="150">
             </section>
             <section class="navOptions">
-                <a href="index.html">Home</a>
-                <a href="pokemons/bulbasaur.html">Pokedex</a>
-                <a href="cadastro.html">Cadastro</a>
+                <a href="../../index.html">Home</a>
+                <a href="../../pokemons/bulbasaur.html">Pokedex</a>
+                <a href="../../cadastro.html">Cadastro</a>
             </section>
         </nav>
         <nav class="searchSection">
             <section class="navOptions2">
                 <a href="">Bulbasaur</a>
-                <a href="">charizard</a>
-                <a href="">Charmander</a>
+                <a href="../../pokemons/charizard.html">charizard</a>
+                <a href="../../pokemons/charmander.html">Charmander</a>
             </section>
         </nav>
         <section class="content">
             <article class="pokemon">
-                <img src="../../images/" alt="Bulbasaur">
+                <img src="../../images/bulbasaur.png" alt="Bulbasaur">
             </article>
 
 
