--- a/pokemons/bulbasaur/bulbasaur.html
+++ b/pokemons/bulbasaur/bulbasaur.html
@@ -13,7 +13,8 @@
     <div class="container">
         <nav class="navBar">
             <section>
-                <img class="logo" src="../../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" height="80" width="150">
+                <img class="logo" src="../../images/pokemon-logo-svg.svg" alt="Logotipo Pokemon" height="80"
+                    width="150">
             </section>
             <section class="navOptions">
                 <a href="../../index.html">Home</a>
@@ -23,9 +24,9 @@
         </nav>
         <nav class="searchSection">
             <section class="navOptions2">
+                <a href="../../index.html">Home</a>
                 <a href="">Bulbasaur</a>
-                <a href="../../pokemons/charizard.html">charizard</a>
-                <a href="../../pokemons/charmander.html">Charmander</a>
+                <a href="../../pokemons/charmander/charmander.html">Charmander</a>
             </section>
         </nav>
         <section class="content">
@@ -62,7 +63,7 @@
     <section class="card6">
         <h3>Speed: 50</h3>
     </section>
-    
+
 
 
 </body>
