--- a/pokemons/charizard/charizard.html
+++ b/pokemons/charizard/charizard.html
@@ -24,15 +24,15 @@
     </header>
     <section class="pokemonsBar">
         <div class="prev">
-            <a href="../../pokemons/bulbasaur/bulbasaur.html">
-                < Bulbasaur </a>
+            <a href="../../pokemons/charmander/charmander.html">
+                < Charmander </a>
         </div>
         <div class="current">
             <a href="#">Nº 004 Charizard</a>
         </div>
         <div class="next">
-            <a href="../../pokemons/charmander/charmander.html">
-                Charmander >
+            <a href="../../pokemons/rattata/rattata.html">
+                Rattata >
             </a>
         </div>
     </section>
